@@ -607,6 +607,10 @@ SOURCE=.\server\util_time.c
 # End Source File
 # Begin Source File
 
+SOURCE=.\include\util_varbuf.h
+# End Source File
+# Begin Source File
+
 SOURCE=.\os\win32\util_win32.c
 # End Source File
 # Begin Source File
